@@ -14,7 +14,6 @@ Check all variables in the model actually exist in the data
 
 Model Specification Checks:
 Check response types for mixed response models (MLwiN allows Normals plus binaries OR Poissons, all discrete responses must use the same link function)
-(IGLS) Check model has more than one level if > MQL1 specified
 (IGLS) Check lower levels are non-equal standardised weights if standardised weights are specified
 
 Additional Functionality:
